:bug: Hide scrollbars on multi selects (#2160)

--- a/packages/design-system/theme/src/select.scss
+++ b/packages/design-system/theme/src/select.scss
@@ -15,6 +15,10 @@
 
 	.el-select__tags {
 		overflow-x: scroll;
+
+		&::-webkit-scrollbar {
+			display: none;
+		}
 	}
 
 	.el-select__tags > span {
